Remove secrets from history (correct paths)

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,11 @@ backend/serviceAccountKey.json
 # Dependencies
 node_modules/
 __pycache__/
+
+.env
+*.env
+backend/.env
+my-personal-assistant/backend/.env
+serviceAccountKey.json
+backend/serviceAccountKey.json
+my-personal-assistant/backend/serviceAccountKey.json
